--- a/index.html
+++ b/index.html
@@ -5,8 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library Project</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div class="header">
+      <h1>The Reading Room</h1>
+      <h4><em>Fueling Minds, One Page at a Time</em></h4>
+      <button id="addBookBtn">Add a Book</button>
+    </div>
+
+    <div class="book-section">
+      <h4>Book Collections</h4>
+      <div class="book-library">
+        <div class="book-item">
+          <p class="title"></p>
+          <p class="label">Author: <span class="author"></span></p>
+          <p class="label">Pages: <span class="pages"></span></p>
+          <div class="status-controls">
+            <p class="status-label">Status:</p>
+            <button class="status read"></button>
+          </div>
+          <button class="remove">Remove Book</button>
+        </div>
+
+        <div class="book-item">
+          <p class="title"></p>
+          <p class="label">Author: <span class="author"></span></p>
+          <p class="label">Pages: <span class="pages"></span></p>
+          <div class="status-controls">
+            <p class="status-label">Status:</p>
+            <button class="status unread"></button>
+          </div>
+          <button class="remove">Remove Book</button>
+        </div>
+
+        <div class="book-item">
+          <p class="title"></p>
+          <p class="label">Author: <span class="author"></span></p>
+          <p class="label">Pages: <span class="pages"></span></p>
+          <div class="status-controls">
+            <p class="status-label">Status:</p>
+            <button class="status read"></button>
+          </div>
+          <button class="remove">Remove Book</button>
+        </div>
+      </div>
+    </div>
+
+    <dialog id="bookDialog">
+      <h2>Add a New Book</h2>
+      <form method="dialog" id="bookForm">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required />
+
+        <label for="author">Author:</label>
+        <input type="text" id="author" name="author" required />
+
+        <label for="pages">Pages:</label>
+        <input type="number" id="pages" name="pages" required />
+
+        <label for="status">Status:</label>
+        <select name="status" id="status">
+          <option value="">--Please select an option--</option>
+          <option value="read">Read</option>
+          <option value="unread">Unread</option>
+        </select>
+
+        <menu>
+          <button type="reset">Clear</button>
+          <button id="closeBtn" type="button">Close</button>
+          <button type="submit">Add</button>
+        </menu>
+      </form>
+    </dialog>
     <script src="./script.js"></script>
   </body>
 </html>
